# System-Automation

./: .gitignore  CMakeLists.txt  CommunicatiePlan  README.md
Front-End/: .env_dev  .env_prod  .gitignore  data_socket.py  launch.sh
Front-End/static/js/: dashboard.js
Front-End/system_automation/: methods.py  objects.py
Front-End/templates/: base.html  dashboard.html  index.html  login.html
front-end/: .gitignore  Functions.php  HandleRequests.php  README.md  app.py  dashboad_actions.txt  data_socket.py  index.php  init.sh  requirements.txt  test.py  test_data.py  test_db.sqlite
front-end/static/css/: dashboard.css  icons.css  index.css
front-end/static/js/: dashboard.js
front-end/system_automation/: __init__.py  api.py  config.py  db_models.py  methods.py  objects.py  utility.py
front-end/templates/: base.html  dashboard.html  dashboard_parents.html  guard_interface.html  index.html  login.html  parent_interface.html
raspberry-pi/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PiClient.cbp  README.md  Sock.cbp  Socke.cbp  Socket.cbp  Socket.cpp  Socket.h  cmake_install.cmake  includes.h  logger.cpp  logger.h  main  main.cpp  time.h  timeKeeper  timeKeeper.cpp  timeKeeper.h
raspberry-pi/Socket/: Socket.cpp  Socket.h  webSocket.cpp  webSocket.h
raspberry-pi/domObjects/: bed.cpp  bed.h  chair.cpp  chair.h  domObject.cpp  domObject.h  door.cpp  door.h  fridge.cpp  fridge.h  lamp.cpp  lamp.h  main  pillar.cpp  pillar.h  wall.cpp  wall.h
raspberry-pi/json/: json.hpp
raspberry-pi/redis/hiredis/: CMakeLists.txt  hiredis.h  read.h  sds.h
wemos/: README.md  main.cpp  platformio.ini  stresstest.py  testall.py
wemos/src/: components.cpp  components.h  main.cpp  wifi.cpp  wifi.h  wifiHandler.cpp  wifiHandler.h
wemos/src/domobjects/: Pillar.cpp  bed.cpp  bed.h  chair.cpp  components.cpp  deur.cpp  domobject.cpp  domobject.h  door.cpp  fridge.cpp  tablelamp.cpp  wall.cpp
